Opened 5 years ago
Closed 5 years ago
#15386 closed bug (fixed)
[HaikuDepot] unable to select packages in featured tab
Reported by: | diver | Owned by: | apl-haiku |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Applications/HaikuDepot | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev53511, x86_64.
Looks like some recent commit broke package selection in featured tab.
Note:
See TracTickets
for help on using tickets.