HaikuDepot: Fix Selection in Featured Package List

Fixes #15386

Change-Id: Id9e198b85d02dccf7d71aeb1c85b29639ef15059
Reviewed-on: https://review.haiku-os.org/c/haiku/+/1893
Reviewed-by: Stephan Aßmus <superstippi@gmx.de>